--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: camera_stream_test3
-description: A new Flutter project.
+name: camera_robot
+description: A Flutter project.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   camera: ^0.5.7
+  permission_handler: ^5.0.0
+  path_provider: ^1.6.7
 
 dev_dependencies:
   flutter_test:
